--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <html>
+
 <head>
-<script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
-<script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
+    <script src="script.js"></script>
+    <script src="compiler.js"></script>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+
+<body onload="generateDOM()">
+    <div onload="generatePost()"></div>
 </body>
+
 </html>
-
-
