--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
 
 <body onload="generateDOM()">
     <div onload="generatePost()"></div>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBNTeHNLpPhNFW8mc_ShRzzgjdOjqm2lcE",
+    authDomain: "palmeet-41580.firebaseapp.com",
+    databaseURL: "https://palmeet-41580.firebaseio.com",
+    projectId: "palmeet-41580",
+    storageBucket: "palmeet-41580.appspot.com",
+    messagingSenderId: "791160264358",
+    appId: "1:791160264358:web:5505c9867ebb7c3e628667"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+<script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
+
+
 </body>
 
 </html>
