--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
 
 
- <script src="./script.js"></script>
 <script src="./js/comms.js"></script>
+ <script defer src="./js/nscript.js"></script>
 </body>
 
 </html>
