--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
     <script src="./compiler.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
@@ -31,8 +30,9 @@
 <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
 
 
+<script src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
 <script src="./js/comms.js"></script>
- <script defer src="./js/nscript.js"></script>
+<script defer src="./js/bundle.js"></script>
 </body>
 
 </html>
