added persistent peerid in localStorage

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <script src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
 <script src="./js/comms.js"></script>
-<script defer src="./js/nscript.js"></script>
+<script defer src="./js/bundle.js"></script>
 </body>
 
 </html>
