--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
+    <script src="./browser-matrix.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
     <script src="./compiler.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
