added button to tell people to refresh

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 
 <body onload="generateDOM()">
+	<div id='connectNotif'>
+			<img class='notif' id='imgConnectNotif'
+		       	src='./R/Refresh_Icon.svg' onClick='window.location.reload();'>
+	</div>
+
     <div onload="generatePost()"></div>
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
