--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
     <script src="./compiler.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
@@ -33,7 +33,6 @@
   firebase.initializeApp(firebaseConfig);
 </script>
 <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
-
 
 <script src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
 <script src="./js/comms.js"></script>
